--- a/build.gradle
+++ b/build.gradle
@@ -11,3 +11,10 @@ jar {
                    'Implementation-Version': version
     }
 }
+
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+}
